[package]
name = "toodee"
version = "0.4.1"
authors = ["Anton Marsden <anton.marsden@ninetyten.co.nz>"]
edition = "2021"
description = "A lightweight 2D wrapper around a Vec."
documentation = "https://docs.rs/toodee/"
repository = "https://github.com/antonmarsden/toodee"
readme = "README.md"
keywords = ["array", "matrix", "sort"]
license = "MIT OR Apache-2.0"
categories = ["data-structures", "no-std"]
exclude = [ ".github/*", ]

[features]
default = ["translate", "sort", "copy"]

translate = []

sort = []

copy = []

[dependencies]

[dev-dependencies]
rand = "0.8.5"

[dev-dependencies.criterion]
version = "0.3.4"
features = ["html_reports"]

[[bench]]
name = "toodee"
harness = false

[[bench]]
name = "translate"
harness = false

[[bench]]
name = "sort"
harness = false
