[package]
name = "toodee"
version = "0.4.2"
authors = ["Anton Marsden <anton.marsden@ninetyten.co.nz>"]
edition = "2021"
description = "A lightweight 2D wrapper around a Vec."
documentation = "https://docs.rs/toodee/"
repository = "https://github.com/antonmarsden/toodee"
readme = "README.md"
keywords = ["array", "matrix", "sort", "transpose", "translate"]
license = "MIT OR Apache-2.0"
categories = ["algorithms", "data structures", "no-std"]
exclude = [ ".github/*", ]

[features]
default = ["translate", "sort", "copy", "serde", "transpose"]

translate = []

transpose = ["dep:transpose"]

sort = []

copy = []

serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.181", optional = true, default-features = false, features = ["derive", "alloc"] }
transpose = { version = "0.2.2", optional = true }

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.104"

[dev-dependencies.criterion]
version = "0.3.4"
features = ["html_reports"]

[[bench]]
name = "toodee"
harness = false

[[bench]]
name = "translate"
harness = false

[[bench]]
name = "sort"
harness = false
